# bpm

./: .gitignore  AmplificationWorker.cpp  AmplificationWorker.h  Bpm.cpp  Bpm.h  BpmVideoProcessor.cpp  BpmVideoProcessor.h  CMakeLists.txt  Detector.cpp  Detector.h  FaceDetectorWorker.cpp  FaceDetectorWorker.h  ModeSelectorWindow.cpp  ModeSelectorWindow.h  MyButton.cpp  MyButton.h  README.MD  amplify.cpp  amplify.h  bpm  config.h  config.h.in  constants.h  constants.h.in  ctime.md  imageOperation.cpp  imageOperation.h  licence.md  main.cpp  skinDetect.cpp  skinDetect.h
bpm/: main.cpp
bpm.xcodeproj/: project.pbxproj
bpm.xcodeproj/xcuserdata/michal.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
bpm.xcodeproj/xcuserdata/michal.xcuserdatad/xcschemes/: bpm.xcscheme  xcschememanagement.plist
data/haarcascades/: haarcascades_eye.xml
lib/: AmplificationWorker.cpp  AmplificationWorker.h  BpmVideoProcessor.cpp  BpmVideoProcessor.h  BpmWindow.cpp  BpmWindow.h  Detector.cpp  Detector.h  Middleware.cpp  Middleware.h  ModeSelectorWindow.cpp  ModeSelectorWindow.h  imageOperation.cpp  imageOperation.h  stabilization.cpp  stabilization.h
lib/logs/: logs.cpp
performanceMesure/: intensityValues.txt  measure.txt
thesis/: synopsis.md  thesis.tex
